fix header margin alignment

--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -4,11 +4,12 @@
     }
 
 .header {
+	border-collapse: collapse;
 	margin: auto;
       display: flex;
       align-items: center;
       gap: 15px;
-      margin-left: 60px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
     }
 
 .styled-table-top {
